# scheddy

./: .gitignore  Cargo.toml  compose.yml
api/: Cargo.toml
api/src/: main.rs  routes.rs  server.rs
infrastructure/: Cargo.toml
infrastructure/.sqlx/: query-028190f0676f76f57dc7f9dab7a04e8408ff030eb450dcce0176e615be7397ab.json  query-06a5b54267841ac77a780efa4ced5171a71a2287896a2dd418bd49596d4d9feb.json  query-078ce3791a4606a2c0995ef908354169849522f457654cc8843c59d33f4d1a33.json  query-097c1aed6e1560c210decd8b585bb0c5393c7ce95813e398ad06212dfc230de7.json  query-0dcf8c7bc21ad8fecfb721f191ce2ee946a25d686c9f501cfe26b750f9f80bd6.json  query-11e5a636f20c203f61e50b2305d56530cf04299c00ecbe69fa1fe917817ce5ad.json  query-1447d995280080553428435cdd600f709190a1bb719b3e1f8e1054d2fdaccb27.json  query-16329c17a25130bdb8e92b37186df832742d4bd2ffe92fad687a75158158b37c.json  query-1660b05e0cd1030f71f113bd5c51f36e82838eab5f30ea4fe40b11ee39ff230a.json  query-19453563f9c29247738ec41b8c178a978f6930f1248fb03161eeadd9eafeb489.json  query-27b61269bc7a357b1857e0761c513214c5c4f7d7ce2457f5d099a142676b2365.json  query-37a06c1327cafc1f8d110ec7eb5452fab8dfc2fcef17f1bcfbf5f6f52c92613c.json  query-3914547d5051ec1e86058b619cdc8bd8d8678ebce0a6e39d4cce01ab166431ae.json  query-3bafed28ad57d6fab7c5185b5e3007cd107030660383d97f866fbb6e7efcdf1b.json  query-3d15a80afbc81d89687f875ff9930959be27453e71319d69e0fda655a8ae90cc.json  query-3f31b3eb3f2d2e2ef9e5f9b9fd4becd83fa4bbad0e4563f5791dc01dc817c1c4.json  query-3f6f2a77b2476a2c5da500f507bdb43e31338b1df2ab77b15b3e565ff9082484.json  (+39 more)
infrastructure/src/: lib.rs  (+4 more)
(+104 files in other folders)
