[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
foundation = { path = "../foundation" }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.1" }
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0.9"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
