[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
domain = { path = "../domain", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "macros",
    "migrate",
    "uuid",
    "chrono"
] }
uuid = { version = "1.12.1", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
